--- a/index.html.html
+++ b/index.html.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Misha Morozov — Social Worker / Psychotherapist</title>
   <meta name="description" content="Social Worker with Advanced NLP therapy knowledge for lasting transformation. Online and in‑person sessions." />
-  <link rel="canonical" href="https://mishamorozov.com/">
+  <link rel="canonical" href="http://mishamorozov.com/">
  
   <meta name="theme-color" content="#2c2c2c" media="(prefers-color-scheme: light)">
   <meta name="theme-color" content="#1a1a1a" media="(prefers-color-scheme: dark)">
@@ -812,4 +812,5 @@
   </footer>
 
 </body>
+
 </html>
