--- a/index.html
+++ b/index.html
@@ -845,11 +845,11 @@
               </div>
               <div class="form-group">
                 <label for="bk_email">Email address</label>
-                <input id="bk_email" type="email" placeholder="your@email.com" required />
+                <input id="bk_email" type="email" placeholder="info.mishamorozov@gmail.com" required />
               </div>
               <div class="form-group">
                 <label for="bk_phone">Phone (optional)</label>
-                <input id="bk_phone" type="tel" placeholder="+45 00 00 00 00" />
+                <input id="bk_phone" type="tel" placeholder="+45 50 30 03 60" />
               </div>
               <div class="form-group">
                 <label for="bk_message">Brief description (optional)</label>
@@ -878,8 +878,8 @@
         <h2 class="section-title">Contact Information</h2>
         <div class="contact-grid">
           <div class="info-list">
-            <p><strong>📧 Email:</strong> contact@mishamorozov.com</p>
-            <p><strong>📱 Phone:</strong> +45 XX XX XX XX</p>
+            <p><strong>📧 Email:</strong> info.mishamorozov@gmail.com</p>
+            <p><strong>📱 Phone:</strong> +45 50 30 03 60</p>
             <p><strong>📍 Location:</strong> Holstebro, Denmark</p>
             <p><strong>🕒 Hours:</strong> By appointment only</p>
           </div>
@@ -896,3 +896,4 @@
       <p>© 2026 Misha Morozov. All rights reserved.</p>
       <p>This website does not provide emergency mental health services.</p>
     </div>
+
