--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
               <h3>Session Information</h3>
               <p style="color:#ccc;margin:0 0 1rem">🕒 Flexible scheduling: weekdays & weekends</p>
               <p style="color:#ccc;margin:0 0 1rem">📍 Possible in-person sessions</p>
-              <p style="color:#ccc;margin:0 0 1rem">💻 Online platforms: WhatsApp, Viber, or other alternative video platforms</p>
+              <p style="color:#ccc;margin:0 0 1rem">💻 Online platforms: WhatsApp +45 50 300 360, Viber +45 50 300 360, or other alternative video platforms</p>
               <p style="color:#ccc;margin:0 0 1rem">🌍 Languages: Danish, Ukrainian, Russian, in some cases - English</p>
               <p style="color:#ccc;margin:0">💳 Payment: Bank Transfer or MobilePay</p>
             </div>
@@ -908,8 +908,8 @@
         <h2 class="section-title">Contact Information</h2>
         <div class="contact-grid">
           <div class="info-list">
-            <p><strong>📧 Email:</strong> contact@mishamorozov.com</p>
-            <p><strong>📱 Phone:</strong> +45 XX XX XX XX</p>
+            <p><strong>📧 Email:</strong> info.mishamorozov@gmail.com</p>
+            <p><strong>📱 Phone:</strong> +45 50 30 03 60</p>
             <p><strong>📍 Location:</strong> Holstebro, Denmark</p>
             <p><strong>🕒 Hours:</strong> By appointment only</p>
           </div>
@@ -926,3 +926,4 @@
       <p>© 2026 Misha Morozov. All rights reserved.</p>
       <p>This website does not provide emergency mental health services.</p>
     </div>
+
