--- a/index.html
+++ b/index.html
@@ -910,6 +910,8 @@
           <div class="info-list">
             <p><strong>📧 Email:</strong> info.mishamorozov@gmail.com</p>
             <p><strong>📱 Phone:</strong> +45 50 30 03 60</p>
+            <p><strong>📱 WhatsApp:</strong> +45 50 30 03 60</p>
+            <p><strong>📱 Viber:</strong> +45 50 30 03 60</p>
             <p><strong>📍 Location:</strong> Holstebro, Denmark</p>
             <p><strong>🕒 Hours:</strong> By appointment only</p>
           </div>
@@ -926,4 +928,5 @@
       <p>© 2026 Misha Morozov. All rights reserved.</p>
       <p>This website does not provide emergency mental health services.</p>
     </div>
+
 
