--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
               <h3>Session Information</h3>
               <p style="color:#ccc;margin:0 0 1rem">🕒 Flexible scheduling: weekdays & weekends</p>
               <p style="color:#ccc;margin:0 0 1rem">📍 Possible in-person sessions</p>
-              <p style="color:#ccc;margin:0 0 1rem">💻 Online platforms like WhatsApp, Viber, or other alternative video platforms</p>
+              <p style="color:#ccc;margin:0 0 1rem">💻 Online platforms: WhatsApp, Viber, or other alternative video platforms</p>
               <p style="color:#ccc;margin:0 0 1rem">🌍 Languages: Danish, Ukrainian, Russian, in some cases - English</p>
               <p style="color:#ccc;margin:0">💳 Payment: Bank Transfer or MobilePay</p>
             </div>
@@ -928,6 +928,7 @@
       <p>© 2026 Misha Morozov. All rights reserved.</p>
       <p>This website does not provide emergency mental health services.</p>
     </div>
+
 
 
 
