--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
         navBooking: "Booking",
         navContact: "Contact",
         heroTitle: "Experienced Social Worker with Advanced NLP Therapy Skills for Your Individual and Lasting Transformation",
-        heroSubtitle: "Combining the power of Neuro-Linguistic Programming with compassionate psychotherapy. Specialized in rapid change techniques for individuals and couples. Available in-person in Holstebro city or secure online sessions across Denmark.",
+        heroSubtitle: "Combining the power of Neuro-Linguistic Programming with compassionate psychotherapy. Specialized in rapid change techniques for individuals and couples. Available in-person in Holstebro or secure online sessions across Denmark.",
         heroCta: "Schedule a Consultation",
         trustNLP: "NLP Master and Practitioner",
         trustDegree: "Danish Social Worker Degree",
@@ -714,7 +714,7 @@
         navBooking: "Booking",
         navContact: "Kontakt",
         heroTitle: "Erfaren Socialrådgiver med Avancerede NLP Terapifærdigheder til Din Individuelle og Varige Transformation",
-        heroSubtitle: "Kombinerer kraften fra Neuro-Lingvistisk Programmering med medfølende psykoterapi. Specialiseret i hurtige forandringsteknikker for enkeltpersoner og par. Tilgængelig personligt i Holstebro by eller sikre online-sessioner i hele Danmark.",
+        heroSubtitle: "Kombinerer kraften fra Neuro-Lingvistisk Programmering med medfølende psykoterapi. Specialiseret i hurtige forandringsteknikker for enkeltpersoner og par. Tilgængelig personligt i Holstebro eller sikre online-sessioner i hele Danmark.",
         heroCta: "Book en Konsultation",
         trustNLP: "NLP Mester og Practitioner",
         trustDegree: "Dansk Socialrådgiver Grad",
@@ -795,7 +795,7 @@
         navBooking: "Запис",
         navContact: "Контакти",
         heroTitle: "Досвідчений соціальний працівник з передовими навичками НЛП-терапії для вашої індивідуальної та тривалої трансформації",
-        heroSubtitle: "Поєднання сили нейро-лінгвістичного програмування з співчутливою психотерапією. Спеціалізуюся на техніках швидких змін для окремих осіб та пар. Доступні особисті зустрічі в місті Хольстебро або безпечні онлайн-сесії по всій Данії.",
+        heroSubtitle: "Поєднання сили нейро-лінгвістичного програмування з співчутливою психотерапією. Спеціалізуюся на техніках швидких змін для окремих осіб та пар. Доступні особисті зустрічі в Хольстебро або безпечні онлайн-сесії по всій Данії.",
         heroCta: "Записатися на консультацію",
         trustNLP: "Майстер та практик НЛП",
         trustDegree: "Датський диплом соціального працівника",
@@ -803,7 +803,7 @@
         trustLanguages: "4 мови",
         trustOnline: "Онлайн та особисто",
         aboutTitle: "Про мою практику",
-        aboutPara1: "Я підтримую дорослих та пари у подоланні тривоги, депресії, травми, вигорання та важливих життєвих переходів. Мій підхід унікально поєднує традиційні принципи соціальної роботи з передовими технікамиНЛП (нейро-лінгвістичне програмування), створюючи потужні шляхи до тривалої трансформації.",
+        aboutPara1: "Я підтримую дорослих та пари у подоланні тривоги, депресії, травми, вигорання та важливих життєвих переходів. Мій підхід унікально поєднує традиційні принципи соціальної роботи з передовими техніками НЛП (нейро-лінгвістичне програмування), створюючи потужні шляхи до тривалої трансформації.",
         aboutPara2: "Ми працюватимемо разом — у вашому темпі — щоб зрозуміти шаблони мислення, перепрограмувати обмежуючі переконання та побудувати стійкі стратегії подолання. Використовуючи перевірені методи НЛП разом із співчутливою терапією, кожна сесія адаптована до ваших унікальних потреб та культурного походження.",
         aboutPara3: "Як соціальний працівник я можу допомогти вам у вашому індивідуальному випадку з терпінням та відданістю. Завдяки моєму широкому досвіду роботи в Данії я можу надати вам високий рівень обслуговування та дати вам відчути справжнє значення розширення можливостей. Тож спробуйте і забронюйте безкоштовну консультацію зі мною, і давайте зробимо перший крок разом.",
         credentialsTitle: "Професійні кваліфікації",
@@ -876,7 +876,7 @@
         navBooking: "Запись",
         navContact: "Контакты",
         heroTitle: "Опытный социальный работник с передовыми навыками НЛП-терапии для вашей индивидуальной и длительной трансформации",
-        heroSubtitle: "Сочетание силы нейро-лингвистического программирования с сострадательной психотерапией. Специализируюсь на техниках быстрых изменений для отдельных людей и пар. Доступны личные встречи в городе Хольстебро или безопасные онлайн-сессии по всей Дании.",
+        heroSubtitle: "Сочетание силы нейро-лингвистического программирования с сострадательной психотерапией. Специализируюсь на техниках быстрых изменений для отдельных людей и пар. Доступны личные встречи в Хольстебро или безопасные онлайн-сессии по всей Дании.",
         heroCta: "Записаться на консультацию",
         trustNLP: "Мастер и практик НЛП",
         trustDegree: "Датский диплом социального работника",
@@ -1014,8 +1014,6 @@
         credentials[1].textContent = t.credential2;
         credentials[2].textContent = t.credential3;
       }
-      
-      updateElement('.portrait-fallback', `${t.portraitAlt}<br><small style="opacity:.7">Misha Morozov</small>`, true);
       
       // Services section
       updateElement('#services .section-title', t.servicesTitle);
@@ -1262,7 +1260,7 @@
     <section id="home" class="hero">
       <div class="container hero-inner">
         <h1>Experienced Social Worker with Advanced NLP Therapy Skills for Your Individual and Lasting Transformation</h1>
-        <p>Combining the power of Neuro-Linguistic Programming with compassionate psychotherapy. Specialized in rapid change techniques for individuals and couples. Available in-person in Holstebro city or secure online sessions across Denmark.</p>
+        <p>Combining the power of Neuro-Linguistic Programming with compassionate psychotherapy. Specialized in rapid change techniques for individuals and couples. Available in-person in Holstebro or secure online sessions across Denmark.</p>
         <a class="cta" href="#booking">
           <span>Schedule a Consultation</span>
           <span>→</span>
@@ -1312,7 +1310,8 @@
           </div>
           <div>
             <div class="portrait-container">
-              <div class="portrait-fallback">
+              <img src="misha-photo.jpg" alt="Misha Morozov - Professional Photo" class="portrait-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
+              <div class="portrait-fallback" style="display:none;">
                 Professional Photo<br>
                 <small style="opacity:.7">Misha Morozov</small>
               </div>
