--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
       
       // Hero section
       updateElement('.hero h1', t.heroTitle);
-      updateElement('.hero > .container > .hero-inner > p', t.heroSubtitle);
+      updateElement('#hero-subtitle', t.heroSubtitle);
       updateElement('.cta span:first-child', t.heroCta);
       
       // Trust indicators
@@ -1357,7 +1357,7 @@
     <section id="home" class="hero">
       <div class="container hero-inner">
         <h1>Experienced Social Worker with Advanced NLP Therapy Skills for Your Individual and Lasting Transformation</h1>
-        <p>Combining the power of Neuro-Linguistic Programming with compassionate psychotherapy. Specialized in rapid change techniques for individuals and couples. Available in-person in Holstebro or secure online sessions across Denmark.</p>
+        <p id="hero-subtitle">Combining the power of Neuro-Linguistic Programming with compassionate psychotherapy. Specialized in rapid change techniques for individuals and couples. Available in-person in Holstebro or secure online sessions across Denmark.</p>
         <a class="cta" href="#booking">
           <span>Schedule a Consultation</span>
           <span>→</span>
@@ -1510,7 +1510,7 @@
         <h2 class="section-title">Contact Information</h2>
         <div class="contact-grid">
           <div class="info-list">
-            <p><strong>📧 Email:</strong> info.mishamorozov@gmail.com</p>
+            <p><strong>📧 Email:</strong> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="a8c1c6cec786c5c1dbc0c9c5c7dac7d2c7dee8cfc5c9c1c486cbc7c5">[email&#160;protected]</a></p>
             <p><strong>📱 Phone:</strong> +45 50 30 03 60</p>
             <p><strong>📱 WhatsApp:</strong> +45 50 30 03 60</p>
             <p><strong>📱 Viber:</strong> +45 50 30 03 60</p>
@@ -1527,9 +1527,4 @@
 
   <footer>
     <div class="container">
-      <p>© 2026 Misha Morozov. All rights reserved.</p>
-      <p>This website does not provide emergency mental health services.</p>
-    </div>
-  </footer>
-</body>
-</html>
+      <p>© 2026 Misha Morozov. All rights 
