--- a/index.html
+++ b/index.html
@@ -1510,7 +1510,7 @@
         <h2 class="section-title">Contact Information</h2>
         <div class="contact-grid">
           <div class="info-list">
-            <p><strong>📧 Email:</strong> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="a8c1c6cec786c5c1dbc0c9c5c7dac7d2c7dee8cfc5c9c1c486cbc7c5">[email&#160;protected]</a></p>
+            <p><strong>📧 Email:</strong> info.mishamorozov@gmail.com</p>
             <p><strong>📱 Phone:</strong> +45 50 30 03 60</p>
             <p><strong>📱 WhatsApp:</strong> +45 50 30 03 60</p>
             <p><strong>📱 Viber:</strong> +45 50 30 03 60</p>
@@ -1527,4 +1527,4 @@
 
   <footer>
     <div class="container">
-      <p>© 2026 Misha Morozov. All rights 
+      <p>© 2026 Misha Morozov. All rights
