--- a/index.html
+++ b/index.html
@@ -1527,4 +1527,10 @@
 
   <footer>
     <div class="container">
-      <p>© 2026 Misha Morozov. All rights
+      <p>© 2026 Misha Morozov. All rights reserved.</p>
+      <p>This website does not provide emergency mental health services.</p>
+    </div>
+  </footer>
+</body>
+</html>
+      
