--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
         credential2: "Psychotherapist training in NLP (Neuro-Linguistic Programming) Practitioner & Master",
         credential3: "Education degree from one of the world's most leading programs",
         portraitAlt: "Professional Photo",
-        servicesTitle: "Therapeutic Services",
+        servicesTitle: "My Services",
         service1Title: "Individual Therapy with NLP",
         service1Desc: "One‑to‑one sessions combining traditional psychotherapy with NLP techniques. Focus on anxiety, depression, trauma recovery, and personal growth through pattern recognition, belief restructuring, and linguistic reframing.",
         service2Title: "Couples Counselling",
@@ -956,7 +956,7 @@
         credential2: "Psykoterapeut træning i NLP (Neuro-Lingvistisk Programmering) Practitioner & Master",
         credential3: "Uddannelsesgrad fra et af verdens førende programmer",
         portraitAlt: "Professionelt Foto",
-        servicesTitle: "Terapeutiske Tjenester",
+        servicesTitle: "Mine Tjenester",
         service1Title: "Individuel Terapi med NLP",
         service1Desc: "En-til-en sessioner, der kombinerer traditionel psykoterapi med NLP-teknikker. Fokus på angst, depression, traumebehandling og personlig vækst gennem mønstergenkendelse, trosomstrukturering og sproglig reframing.",
         service2Title: "Parterapi",
@@ -1075,7 +1075,7 @@
         credential2: "Підготовка психотерапевта з НЛП (нейро-лінгвістичне програмування) практик і майстер",
         credential3: "Освітній ступінь з однієї з провідних світових програм",
         portraitAlt: "Професійне фото",
-        servicesTitle: "Терапевтичні послуги",
+        servicesTitle: "Мої послуги",
         service1Title: "Індивідуальна терапія з НЛП",
         service1Desc: "Індивідуальні сесії, що поєднують традиційну психотерапію з техніками НЛП. Фокус на тривозі, депресії, відновленні після травми та особистісному зростанні через розпізнавання патернів, реструктуризацію переконань та лінгвістичний рефреймінг.",
         service2Title: "Консультування пар",
@@ -1194,7 +1194,7 @@
         credential2: "Подготовка психотерапевта по НЛП (нейро-лингвистическое программирование) практик и мастер",
         credential3: "Образовательная степень из одной из ведущих мировых программ",
         portraitAlt: "Профессиональное фото",
-        servicesTitle: "Терапевтические услуги",
+        servicesTitle: "Мои услуги",
         service1Title: "Индивидуальная терапия с НЛП",
         service1Desc: "Индивидуальные сессии, сочетающие традиционную психотерапию с техниками НЛП. Фокус на тревоге, депрессии, восстановлении после травмы и личностном росте через распознавание паттернов, реструктуризацию убеждений и лингвистический рефрейминг.",
         service2Title: "Консультирование пар",
@@ -1737,7 +1737,7 @@
 
     <section id="services" class="services">
       <div class="container">
-        <h2 class="section-title">Therapeutic Services</h2>
+        <h2 class="section-title">My Services</h2>
         <div class="services-grid">
           <article class="service">
             <h3>Individual Therapy with NLP</h3>
