--- a/index.html
+++ b/index.html
@@ -1877,7 +1877,7 @@
         <h2 class="section-title">Contact Information</h2>
         <div class="contact-grid">
           <div class="info-list">
-            <p><strong>📧 Email:</strong> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="e28b8c848dcc8f8b918a838f8d908d988d94a2858f838b8ecc818d8f">[email&#160;protected]</a></p>
+            <p><strong>📧 Email:</strong> <a href="mailto:info.mishamorozov@gmail.com">info.mishamorozov@gmail.com</a></p>
             <p><strong>📱 Phone:</strong> +45 50 30 03 60</p>
             <p><strong>📱 WhatsApp:</strong> +45 50 30 03 60</p>
             <p><strong>📱 Viber:</strong> +45 50 30 03 60</p>
