--- a/index.html
+++ b/index.html
@@ -771,6 +771,33 @@
       }
     }
   </style>
+
+<!-- Structured Data for SEO -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ProfessionalService",
+  "name": "Misha Morozov - Social Worker & NLP Psychotherapist",
+  "description": "Experienced Social Worker with Advanced NLP Therapy Skills for Individual and Lasting Transformation",
+  "url": "https://mishamorozov.com",
+  "telephone": "+45 50 30 03 60",
+  "email": "info.mishamorozov@gmail.com",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Holstebro",
+    "addressCountry": "DK"
+  },
+  "priceRange": "900-11500 DKK",
+  "serviceType": ["Social Work", "NLP Therapy", "Psychotherapy", "Couples Counseling", "Trauma Resolution"],
+  "availableLanguage": ["Danish", "English", "Ukrainian", "Russian"],
+  "areaServed": {
+    "@type": "Country",
+    "name": "Denmark"
+  }
+}
+</script>
+</head>
+<body>
 </head>
 <body>
   <script>
