--- a/index.html
+++ b/index.html
@@ -2007,7 +2007,7 @@ function canSubmitForm() {
           </div>
           <div>
             <div class="portrait-container">
-              <img src="misha-photo.jpg" alt="Misha Morozov - Professional Photo" class="portrait-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
+              <img src="misha-photo.jpg" alt="Misha Morozov - Professional Photo" class="portrait-img" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';">
               <div class="portrait-fallback" style="display:none;">
                 Professional Photo<br>
                 <small style="opacity:.7">Misha Morozov</small>
