--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Misha Morozov — Social Worker / Psychotherapist</title>
   <meta name="description" content="Social Worker with Advanced NLP therapy knowledge for lasting transformation. Online and in‑person sessions." />
   <link rel="canonical" href="https://mishamorozov.com/">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%23000' width='100' height='100' rx='20'/><text x='50' y='68' font-size='50' text-anchor='middle' fill='white' font-family='Georgia'>MM</text></svg>">
   
   <!-- Security Headers -->
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
