--- a/index.html
+++ b/index.html
@@ -2171,8 +2171,8 @@ function canSubmitForm() {
         <div class="contact-grid">
           <div class="info-list">
             <p><strong>📧 Email:</strong> <a href="mailto:info.mishamorozov@gmail.com">info.mishamorozov@gmail.com</a></p>
-            <p><strong>📱 Phone:</strong> +45 50 30 03 60</p>
-            <p><strong>📱 WhatsApp:</strong> +45 50 30 03 60</p>
+            <p><strong>📱 Phone:</strong> <a href="tel:+4550300360">+45 50 30 03 60</a></p>
+            <p><strong>📱 WhatsApp:</strong> <a href="https://wa.me/4550300360">+45 50 30 03 60</a></p>
             <p><strong>📱 Viber:</strong> +45 50 30 03 60</p>
             <p><strong>📍 Location:</strong> Holstebro, Denmark</p>
             <p><strong>🕒 Hours:</strong> By appointment only</p>
