--- a/index.html
+++ b/index.html
@@ -773,6 +773,11 @@
         scroll-behavior: auto !important;
       }
     }
+
+    @keyframes spin {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
+    }
   </style>
 
 <!-- ============================================
