--- a/index.html
+++ b/index.html
@@ -2262,6 +2262,8 @@ function canSubmitForm() {
       <p>© 2026 Misha Morozov. All rights reserved.</p>
       <p>This website does not provide emergency mental health services.</p>
     </div>
-  </footer>
+ </footer>
+
+  <button id="backToTop" aria-label="Back to top">↑</button>
 </body>
 </html>
