--- a/index.html
+++ b/index.html
@@ -1821,7 +1821,20 @@ function canSubmitForm() {
 
     // Mobile menu toggle
     document.addEventListener('DOMContentLoaded', function() {
-      // Load saved language or default to English
+  // Back to top button
+  const backToTop = document.getElementById('backToTop');
+  window.addEventListener('scroll', function() {
+    if (window.scrollY > 500) {
+      backToTop.classList.add('visible');
+    } else {
+      backToTop.classList.remove('visible');
+    }
+  });
+  backToTop.addEventListener('click', function() {
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+  });
+
+  // Load saved language or default to English
       let savedLang = 'en';
       try {
         savedLang = localStorage.getItem('preferredLanguage') || 'en';
