--- a/index.html
+++ b/index.html
@@ -2298,6 +2298,32 @@ function canSubmitForm() {
       </div>
     </section>
 
+    <section id="testimonials" class="testimonials">
+      <div class="container">
+        <h2 class="section-title">Hvad Klienter Siger</h2>
+        <div class="testimonials-grid">
+          <div class="testimonial">
+            <div class="testimonial-text">
+              <p>"Misha hjalp mig med at navigere i det danske velfærdssystem, da jeg følte mig fuldstændig fortabt. Hans tålmodighed og flersprogede støtte gjorde en svær proces overskuelig."</p>
+            </div>
+            <div class="testimonial-author">
+              <span class="author-name">— Olena K.</span>
+              <span class="author-detail">Migrations- og integrationsstøtte</span>
+            </div>
+          </div>
+          <div class="testimonial">
+            <div class="testimonial-text">
+              <p>"После нескольких сессий с Мишей я наконец почувствовала, что могу справиться со своей тревогой. Его подход с НЛП действительно работает."</p>
+            </div>
+            <div class="testimonial-author">
+              <span class="author-name">— Анна М.</span>
+              <span class="author-detail">Терапия тревожности</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section id="faq" class="faq">
       <div class="container">
         <h2 class="section-title">Frequently Asked Questions</h2>
