--- a/index.html
+++ b/index.html
@@ -1263,6 +1263,7 @@ function canSubmitForm() {
         faq7A: "I provide services in Danish, Ukrainian, Russian, and in some cases English. This is especially important when dealing with authorities, as I can help translate and ensure you fully understand your rights and obligations.",
         faq8Q: "Can I book both therapy and social work services?",
         faq8A: "Absolutely! Many clients benefit from combined support - addressing both mental health needs and practical life challenges. We can create an integrated plan that supports your wellbeing holistically.",
+        testimonialsTitle: "What Clients Say",
         bookingTitle: "Book an Appointment",
         bookingFormTitle: "Select Your Service",
         serviceType: "Service type",
