--- a/index.html
+++ b/index.html
@@ -1383,6 +1383,7 @@ function canSubmitForm() {
         faq7A: "Jeg leverer tjenester på dansk, ukrainsk, russisk og i nogle tilfælde engelsk. Dette er især vigtigt, når man har med myndighederne at gøre, da jeg kan hjælpe med at oversætte og sikre, at du fuldt ud forstår dine rettigheder og forpligtelser.",
         faq8Q: "Kan jeg booke både terapi og socialrådgivning?",
         faq8A: "Absolut! Mange klienter drager fordel af kombineret støtte - adressering af både mentale sundhedsbehov og praktiske livs udfordringer. Vi kan skabe en integreret plan, der støtter dit velvære holistisk.",
+        testimonialsTitle: "Hvad Klienter Siger",
         bookingTitle: "Book en Tid",
         bookingFormTitle: "Vælg Din Tjeneste",
         serviceType: "Tjenestetype",
