--- a/index.html
+++ b/index.html
@@ -1503,6 +1503,7 @@ function canSubmitForm() {
         faq7A: "Я надаю послуги данською, українською, російською та в деяких випадках англійською мовами. Це особливо важливо при спілкуванні з органами влади, оскільки я можу допомогти з перекладом та гарантувати, що ви повністю розумієте свої права та обов'язки.",
         faq8Q: "Чи можу я замовити і терапію, і соціальну роботу?",
         faq8A: "Звісно! Багато клієнтів отримують користь від комбінованої підтримки - вирішення як потреб психічного здоров'я, так і практичних життєвих викликів. Ми можемо створити інтегрований план, який підтримує ваше благополуччя цілісно.",
+        testimonialsTitle: "Що Кажуть Клієнти",
         bookingTitle: "Забронювати зустріч",
         bookingFormTitle: "Виберіть свою послугу",
         serviceType: "Тип послуги",
