--- a/index.html
+++ b/index.html
@@ -1623,6 +1623,7 @@ function canSubmitForm() {
         faq7A: "Я предоставляю услуги на датском, украинском, русском и в некоторых случаях английском языках. Это особенно важно при общении с органами власти, так как я могу помочь с переводом и гарантировать, что вы полностью понимаете свои права и обязанности.",
         faq8Q: "Могу ли я заказать и терапию, и социальную работу?",
         faq8A: "Конечно! Многие клиенты получают пользу от комбинированной поддержки - решения как потребностей психического здоровья, так и практических жизненных вызовов. Мы можем создать интегрированный план, который поддерживает ваше благополучие целостно.",
+        testimonialsTitle: "Что Говорят Клиенты",
         bookingTitle: "Забронировать встречу",
         bookingFormTitle: "Выберите свою услугу",
         serviceType: "Тип услуги",
