--- a/index.html
+++ b/index.html
@@ -2306,7 +2306,7 @@ function canSubmitForm() {
 
     <section id="testimonials" class="testimonials">
       <div class="container">
-        <h2 class="section-title">Hvad Klienter Siger</h2>
+        <h2 class="section-title">What Clients Say</h2>
         <div class="testimonials-grid">
           <div class="testimonial">
             <div class="testimonial-text">
