--- a/index.html
+++ b/index.html
@@ -2076,9 +2076,9 @@ function canSubmitForm() {
         <div class="brand-name">Misha Morozov — Social Worker and NLP Psychotherapist</div>
       </div>
       <div class="nav-right">
-        <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu">
-          <span>☰</span>
-        </button>
+        <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu" aria-expanded="false" aria-controls="navLinks">
+  <span>☰</span>
+</button>
         <ul class="nav-links" id="navLinks">
           <li><a href="#home" class="nav-link">Home</a></li>
           <li><a href="#about" class="nav-link">About</a></li>
