--- a/index.html
+++ b/index.html
@@ -1934,10 +1934,11 @@ function canSubmitForm() {
       const navLinks = document.getElementById('navLinks');
       
       if (menuToggle && navLinks) {
-        menuToggle.addEventListener('click', function() {
-          navLinks.classList.toggle('open');
-        });
-      }
+  menuToggle.addEventListener('click', function() {
+    const isOpen = navLinks.classList.toggle('open');
+    menuToggle.setAttribute('aria-expanded', isOpen.toString());
+  });
+}
 
       // Close menu when clicking a link
       const links = document.querySelectorAll('.nav-link');
